# n8n-flow-gen-mcp

./: .env.example  .gitignore  .mcp.json.example  CONTRIBUTING.md  INSTALLATION.md  LICENSE  README.md  pyproject.toml
examples/: deploy_workflow_example.js
examples/basic/: hello_world_webhook.json
mcp-server/: __init__.py  mcp_server.py  n8n_api_client.py  n8n_workflow_builder.py  node_library.py  utils.py
